--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="match_parent"
         android:orientation="vertical">
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-    />
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,34 +13,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/signUpName"
-                    android:text="姓名"
-                    android:layout_alignTop="@+id/signUpNameInput"
-                    android:layout_alignBottom="@+id/signUpNameInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
-            />
+
 
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_toRightOf="@+id/signUpName"
                     android:id="@+id/signUpNameInput"
-                    android:hint="必填"
+                    android:hint="姓名"
+
                     app:hintEnabled="true"
-                    app:passwordToggleEnabled="true"
                     android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             >
                 <android.support.design.widget.TextInputEditText
-                        android:inputType="textPassword"
-                        android:ems="10"
+                        android:textSize="12sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -56,130 +39,81 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/signUpPhone"
-                    android:text="手机号"
-                    android:layout_alignTop="@+id/signUpNamePhoneInput"
-                    android:layout_alignBottom="@+id/signUpNamePhoneInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/signUpNamePhoneInput"
-                    android:layout_toRightOf="@+id/signUpPhone"
-                    android:hint="必填"
-                    android:textSize="16sp"
-                    android:background="@null"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
+                    android:layout_marginLeft="20dp"
+
+                    android:hint="手机号"
+                    app:hintEnabled="true"
+
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/signUpPassWord"
-                    android:text="密码"
-                    android:layout_alignTop="@+id/signUpPassWordInput"
-                    android:layout_alignBottom="@+id/signUpPassWordInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:textSize="16sp"
-                    android:hint="请输入6-12位字符"
+
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/signUpPassWordInput"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/signUpPassWord"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
+                    android:layout_marginLeft="20dp"
+
+                    android:hint="设置密码（6-12字母数字组合）"
+                    app:hintEnabled="true"
+                    app:passwordToggleEnabled="true"
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:ems="10"
+                />
+
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
+
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/signUpConfirmPW"
-                    android:text="确认密码"
-                    android:layout_alignTop="@+id/signUpConfirmPWInput"
-                    android:layout_alignBottom="@+id/signUpConfirmPWInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
-
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:textSize="16sp"
-                    android:hint="请再次输入密码"
-                    android:id="@+id/signUpConfirmPWInput"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/signUpConfirmPW"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
-        </RelativeLayout>
-
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/signUpIdentifyCode"
-                    android:text="验证码"
-                    android:layout_alignTop="@+id/signUpIdentifyCodeInput"
-                    android:layout_alignBottom="@+id/signUpIdentifyCodeInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
-
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
                     android:id="@+id/signUpIdentifyCodeInput"
-                    android:textSize="16sp"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/signUpIdentifyCode"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:text="发送验证码"
-                    android:textSize="12sp"
-                    android:layout_alignRight="@+id/signUpIdentifyCodeInput"
+                    android:layout_marginLeft="20dp"
+                    android:hint="验证码"
+                    app:hintEnabled="true"
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
             />
         </RelativeLayout>
 
