--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -84,6 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:text="登录"
+                    android:onClick="signInFinish"
                     android:textSize="18sp"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             />
@@ -92,21 +93,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="90dp"
-                    android:text="登录"
+                    android:text="注册"
+                    android:onClick="GoToSignUp"
                     android:textSize="18sp"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             />
 
         </LinearLayout>
-        <android.support.design.button.MaterialButton
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="30dp"
-                android:textSize="12sp"
-                android:id="@+id/material_text_button"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="忘记密码？"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal"
+        >
+            <android.support.design.button.MaterialButton
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="30dp"
+                    android:textSize="12sp"
+                    android:id="@+id/signInForgetPassword"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="忘记密码？"/>
+
+
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
