--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -2,7 +2,7 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical">
 
     <ImageView
@@ -22,132 +22,176 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/changePhone"
-                    android:text="手机号"
-                    android:layout_alignTop="@+id/changeNamePhoneInput"
-                    android:layout_alignBottom="@+id/changeNamePhoneInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
+            <!--<TextView-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:id="@+id/changePhone"-->
+                    <!--android:text="手机号"-->
+                    <!--android:layout_alignTop="@+id/changeNamePhoneInput"-->
+                    <!--android:layout_alignBottom="@+id/changeNamePhoneInput"-->
+                    <!--android:gravity="left|center_vertical"-->
+                    <!--android:layout_marginRight="50dp"-->
+                    <!--android:layout_marginLeft="20dp"-->
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
+            <!--/>-->
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:id="@+id/changeNamePhoneInput"
-                    android:layout_toRightOf="@+id/changePhone"
-                    android:hint="必填"
-                    android:textSize="16sp"
-                    android:background="@null"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
+                    android:hint="手机号"
+
+                    app:hintEnabled="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:textSize="12sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/changePassWord"
-                    android:text="密码"
-                    android:layout_alignTop="@+id/changePassWordInput"
-                    android:layout_alignBottom="@+id/changePassWordInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
+            <!--<TextView-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:id="@+id/changePassWord"-->
+                    <!--android:text="密码"-->
+                    <!--android:layout_alignTop="@+id/changePassWordInput"-->
+                    <!--android:layout_alignBottom="@+id/changePassWordInput"-->
+                    <!--android:gravity="left|center_vertical"-->
+                    <!--android:layout_marginRight="50dp"-->
+                    <!--android:layout_marginLeft="20dp"-->
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:textSize="16sp"
-                    android:hint="请输入6-12位字符"
+            <!--/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="36dp"-->
+                    <!--android:inputType="textPassword"-->
+                    <!--android:ems="10"-->
+                    <!--android:textSize="16sp"-->
+                    <!--android:hint="请输入6-12位字符"-->
+                    <!---->
+                    <!--android:background="@null"-->
+                    <!--android:layout_toRightOf="@+id/changePassWord"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_marginRight="30dp"-->
+            <!--/>-->
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/changePassWordInput"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/changePassWord"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
+                    android:layout_marginLeft="20dp"
+
+                    android:hint="新密码"
+                    app:hintEnabled="true"
+                    app:passwordToggleEnabled="true"
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:ems="10"
+                />
+
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
 
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/changeConfirmPW"
-                    android:text="确认密码"
-                    android:layout_alignTop="@+id/changeConfirmPWInput"
-                    android:layout_alignBottom="@+id/changeConfirmPWInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginLeft="20dp"
+            <!--<TextView-->
+                    <!--android:layout_width="60dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:id="@+id/changeConfirmPW"-->
+                    <!--android:text="确认密码"-->
+                    <!--android:layout_alignTop="@+id/changeConfirmPWInput"-->
+                    <!--android:layout_alignBottom="@+id/changeConfirmPWInput"-->
+                    <!--android:gravity="left|center_vertical"-->
+                    <!--android:layout_marginRight="50dp"-->
+                    <!--android:layout_marginLeft="20dp"-->
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:textSize="16sp"
-                    android:hint="请再次输入密码"
+            <!--/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="36dp"-->
+                    <!--android:inputType="textPassword"-->
+                    <!--android:ems="10"-->
+                    <!--android:textSize="16sp"-->
+                    <!--android:hint="请再次输入密码"-->
+                    <!---->
+                    <!--android:background="@null"-->
+                    <!--android:layout_toRightOf="@+id/changeConfirmPW"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_marginRight="30dp"-->
+            <!--/>-->
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/changeConfirmPWInput"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/changeConfirmPW"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
-        </RelativeLayout>
-
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
-            <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:id="@+id/changeIdentifyCode"
-                    android:text="验证码"
-                    android:layout_alignTop="@+id/changeIdentifyCodeInput"
-                    android:layout_alignBottom="@+id/changeIdentifyCodeInput"
-                    android:gravity="left|center_vertical"
-                    android:layout_marginRight="50dp"
                     android:layout_marginLeft="20dp"
 
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:id="@+id/changeIdentifyCodeInput"
-                    android:textSize="16sp"
-                    android:background="@null"
-                    android:layout_toRightOf="@+id/changeIdentifyCode"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="30dp"
-            />
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:text="发送验证码"
-                    android:textSize="12sp"
-                    android:layout_alignRight="@+id/changeIdentifyCodeInput"
+                    android:hint="确认密码"
+                    app:hintEnabled="true"
+                    app:passwordToggleEnabled="true"
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:ems="10"
+                />
 
-            />
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="6"
+                    android:id="@+id/signUpIdentifyCodeInput"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="20dp"
+                    android:hint="验证码"
+                    app:hintEnabled="true"
+                    android:layout_marginRight="20dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            >
+                <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="获取验证码"
+                    android:layout_toRightOf="@+id/signUpIdentifyCodeInput"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+            />
+        </LinearLayout>
 
         <Button android:layout_width="150dp"
                 android:layout_height="50dp"
