--- a/app/src/main/res/layout/my_self_fragment.xml
+++ b/app/src/main/res/layout/my_self_fragment.xml
@@ -11,6 +11,7 @@
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="6dp"
+              android:id="@+id/mySelfName"
               android:text="姓名：张三"
               android:textSize="18sp"
               android:textColor="@color/colorAccent"
@@ -18,6 +19,7 @@
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="6dp"
+              android:id="@+id/mySelfPhone"
               android:text="手机号:1321321456"
               android:textSize="18sp"
               android:textColor="@color/colorAccent"
