--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -22,6 +22,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/nav_view"
                 android:id="@+id/contentFrame"
                 android:layout_below="@+id/topShowBlock">
             <FrameLayout
