--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="yellow">#FFFFEB3B</color>
     <color name="blue">#00BCD4</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
